--- a/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
+++ b/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
@@ -109,6 +109,7 @@
         }
 
         &.current-question,
+        &.current,
         &.open {
           background: url(../../../../../images/games/level_current.png) no-repeat center / contain;
         }
