--- a/src/web/stylesheets/common/pages/pricing-plans/style.scss
+++ b/src/web/stylesheets/common/pages/pricing-plans/style.scss
@@ -38,7 +38,7 @@
       margin: auto;
       text-align: center;
 
-      @include gm.media-breakpoint-down(xs) {
+      @include gm.media-breakpoint-down(sm) {
         width: 100%;
         text-align: left;
       }
@@ -47,7 +47,7 @@
         font-size: 2.5rem;
         font-weight: 700;
 
-        @include gm.media-breakpoint-down(xs) {
+        @include gm.media-breakpoint-down(sm) {
           font-size: 2rem;
         }
       }
@@ -55,7 +55,7 @@
       p {
         font-size: 1.125rem;
 
-        @include gm.media-breakpoint-down(xs) {
+        @include gm.media-breakpoint-down(sm) {
           font-size: 1rem;
         }
       }
@@ -65,7 +65,7 @@
       margin-top: 2.3rem;
       margin-bottom: 2rem;
 
-      @include gm.media-breakpoint-down(xs) {
+      @include gm.media-breakpoint-down(sm) {
         margin-top: 1.3rem;
       }
 
@@ -88,7 +88,7 @@
         .card-body {
           padding: 1.5rem;
 
-          @include gm.media-breakpoint-down(xs) {
+          @include gm.media-breakpoint-down(sm) {
             padding: 1rem;
           }
 
@@ -96,7 +96,7 @@
             font-size: 1rem;
             width: 83%;
 
-            @include gm.media-breakpoint-down(xs) {
+            @include gm.media-breakpoint-down(sm) {
               width: 100%;
             }
           }
@@ -122,7 +122,7 @@
             height: 3rem;
             display: block;
 
-            @include gm.media-breakpoint-down(xs) {
+            @include gm.media-breakpoint-down(sm) {
               height: auto;
               margin-bottom: 0.5rem;
             }
@@ -133,7 +133,7 @@
             border-radius: 0.75rem;
 
             h4 {
-              @include gm.media-breakpoint-down(xs) {
+              @include gm.media-breakpoint-down(sm) {
                 font-size: 1.3rem;
               }
             }
@@ -159,7 +159,7 @@
           padding: 1rem 3rem;
           font-size: 1.2rem;
 
-          @include gm.media-breakpoint-down(xs) {
+          @include gm.media-breakpoint-down(sm) {
             top: 16px;
             right: -54px;
             margin: 0;
@@ -171,7 +171,7 @@
     }
 
     .price-plans-features {
-      @include gm.media-breakpoint-down(xs) {
+      @include gm.media-breakpoint-down(sm) {
         display: none;
       }
 
@@ -273,7 +273,7 @@
       padding: 2rem;
       margin-top: 2.5rem;
 
-      @include gm.media-breakpoint-down(xs) {
+      @include gm.media-breakpoint-down(sm) {
         padding: 1rem;
       }
 
@@ -285,7 +285,7 @@
         color: gt.theme-var(price-dark-green-color, null, $thememaplight, $cssvars);
         font-size: 2rem;
 
-        @include gm.media-breakpoint-down(xs) {
+        @include gm.media-breakpoint-down(sm) {
           font-size: 1.7rem;
           padding-bottom: 1rem;
         }
@@ -295,7 +295,7 @@
         font-size: 1.1rem;
         width: 95%;
 
-        @include gm.media-breakpoint-down(xs) {
+        @include gm.media-breakpoint-down(sm) {
           font-size: 1rem;
         }
       }
@@ -310,7 +310,7 @@
         font-size: 1.1rem;
         width: 200px;
 
-        @include gm.media-breakpoint-down(xs) {
+        @include gm.media-breakpoint-down(sm) {
           width: 100%;
         }
 
@@ -324,7 +324,7 @@
         img {
           width: 100%;
 
-          @include gm.media-breakpoint-down(xs) {
+          @include gm.media-breakpoint-down(sm) {
             margin-bottom: 1rem;
           }
         }
@@ -336,7 +336,7 @@
       margin-right: -0.938rem;
       display: none;
 
-      @include gm.media-breakpoint-down(xs) {
+      @include gm.media-breakpoint-down(sm) {
         display: block;
       }
 
