--- a/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
+++ b/src/web/stylesheets/common/sass/components/_gameLevelComponent.scss
@@ -92,6 +92,10 @@
         z-index: 2000;
         // background-color: royalblue;
 
+        img {
+          width: 50%;
+        }
+
         &:active {
           cursor: grabbing;
         }
