--- a/src/web/stylesheets/common/pages/pricing-plans/style.scss
+++ b/src/web/stylesheets/common/pages/pricing-plans/style.scss
@@ -6,6 +6,10 @@
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
 .price-container {
+  nav {
+    background-color: gt.theme-var(nav-color, null, $thememaplight, $cssvars);
+  }
+
   .container {
     max-width: 1200px;
   }
@@ -25,6 +29,18 @@
 
     .light-icon {
       color: gt.theme-var(price-current-free, null, $thememaplight, $cssvars) !important;
+    }
+
+    .excluding-gst {
+      font-size: 14px;
+    }
+
+    .free-plan-space {
+      height: 3rem;
+    }
+
+    .free-plan-pointer {
+      cursor: auto;
     }
 
     .btn {
