--- a/src/web/stylesheets/common/pages/your-challenges/style.scss
+++ b/src/web/stylesheets/common/pages/your-challenges/style.scss
@@ -75,6 +75,12 @@
     @include gm.media-breakpoint-down(sm) {
       margin: 1rem 0;
     }
+
+    .challenge-img {
+      img {
+        object-fit: contain;
+      }
+    }
   }
 
   .pagination-footer {
