--- a/src/web/stylesheets/common/pages/your-draft-challenges/style.scss
+++ b/src/web/stylesheets/common/pages/your-draft-challenges/style.scss
@@ -71,6 +71,12 @@
 
   .my-draft-challenges-section {
     margin: 1.6rem 0;
+
+    .challenge-img {
+      img {
+        object-fit: contain;
+      }
+    }
   }
 
   .pagination-footer {
