--- a/src/web/stylesheets/common/pages/challenges/style.scss
+++ b/src/web/stylesheets/common/pages/challenges/style.scss
@@ -337,6 +337,7 @@ $challenge-item-image-height-down-md: 8.25rem;
         width: 100%;
         height: 7rem;
         border-radius: 0.75rem;
+        object-fit: contain;
 
         @include gm.media-breakpoint-up(xxl) {
           height: 8rem;
@@ -528,6 +529,7 @@ $challenge-item-image-height-down-md: 8.25rem;
                   width: 100%;
                   height: 100%;
                   border-radius: 0.75rem;
+                  object-fit: contain;
                 }
               }
 
