--- a/src/web/stylesheets/common/pages/dashboard/style.scss
+++ b/src/web/stylesheets/common/pages/dashboard/style.scss
@@ -455,14 +455,15 @@
                 }
 
                 .progress-sub-header {
-                  font-size: 1rem;
+                  font-size: 0.875rem;
                   color: gt.theme-var(dashboard-text-color-4, null, $thememaplight, $cssvars);
                   margin-bottom: 0;
                 }
 
                 .progress-data {
-                  font-size: 1.25rem;
+                  font-size: 1rem;
                   margin-bottom: 0;
+                  font-weight: bold;
                 }
               }
             }
@@ -470,24 +471,30 @@
 
           .games-container {
             height: 100%;
+            display: grid;
+            grid-template-rows: 2.5fr 1fr;
+            gap: 0.5rem;
 
             .games-block {
-              height: 70%;
               display: flex;
-              align-items: center;
+              align-items: stretch;
+              height: 100%;
+              width: 100%;
+              overflow: hidden;
 
               .games-cards {
                 background-color: gt.theme-var(text-color-2);
                 border-radius: 0.75rem;
                 padding: 0.75rem;
                 width: 100%;
+                overflow: auto;
 
                 .game-item {
                   border-radius: 0.5rem;
 
                   img {
-                    width: 100%;
-                    height: 100%;
+                    width: 5rem;
+                    height: 5rem;
                     padding: 0.25rem;
                   }
 
@@ -499,7 +506,6 @@
             }
 
             .game-btn-block {
-              height: 30%;
               display: flex;
               align-items: center;
 
@@ -507,6 +513,13 @@
                 background-color: gt.theme-var(dashboard-game-btn-bg, null, $thememaplight, $cssvars);
                 border-radius: 0.75rem;
                 color: gt.theme-var(text-color-2);
+                height: 100%;
+                display: grid;
+                align-items: center;
+
+                @include gm.media-breakpoint-down(md) {
+                  padding: 0.75rem;
+                }
 
                 &:hover {
                   text-decoration: none;
@@ -516,8 +529,62 @@
                 p {
                   margin-bottom: 0;
                   font-weight: bold;
+                  font-size: 1.25rem;
+                }
+
+                i {
+                  font-size: 1.5rem;
                 }
               }
+            }
+          }
+        }
+      }
+
+      .dashboard-exclusive-user-container {
+        .exclusive-user-content {
+          border-radius: 0.75rem;
+          background-color: gt.theme-var(dashboard-exclusive-card-bg, null, $thememaplight, $cssvars);
+          padding: 1rem;
+
+          .exclusive-user-data-content {
+            @include gm.media-breakpoint-down(md) {
+              margin-top: 1rem;
+            }
+
+            @include gm.media-breakpoint-up(md) {
+              padding-right: 2rem;
+            }
+
+            h2 {
+              font-weight: bold;
+              color: gt.theme-var(dashboard-exclusive-title-color, null, $thememaplight, $cssvars);
+              margin-bottom: 1rem;
+            }
+
+            p {
+              text-align: justify;
+            }
+
+            #exclusive_user_btn {
+              width: 75%;
+              margin-top: 0.5rem;
+              border: 1px solid gt.theme-var(dashboard-club-btn-color, null, $thememaplight, $cssvars);
+              border-radius: 0.75rem;
+              font-size: 1.25rem;
+              font-weight: bold;
+              color: gt.theme-var(dashboard-club-btn-color, null, $thememaplight, $cssvars);
+
+              @include gm.media-breakpoint-down(md) {
+                width: 100%;
+                padding: 0.75rem;
+              }
+            }
+          }
+
+          .exclusive-user-illustration {
+            img {
+              width: 100%;
             }
           }
         }
@@ -594,6 +661,8 @@
                       height: 12rem;
                       width: 100%;
                       border-radius: 0.75rem;
+                      background-color: gt.theme-var(bg-1);
+                      object-fit: contain;
 
                       @include gm.media-breakpoint-down(md) {
                         height: 8.25rem;
@@ -954,8 +1023,8 @@
   }
 
   ::-webkit-scrollbar {
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 0.25rem;
+    height: 0.25rem;
   }
 
   ::-webkit-scrollbar-track {
