--- a/src/web/stylesheets/common/pages/turtle-challenges/style.scss
+++ b/src/web/stylesheets/common/pages/turtle-challenges/style.scss
@@ -212,6 +212,10 @@
         .challenge-box {
           margin: 0.5rem;
 
+          &:hover {
+            cursor: pointer;
+          }
+
           p {
             color: gt.theme-var(text-color-1);
 
@@ -302,9 +306,23 @@
 
         .runBtnContainer {
           position: relative;
+          display: inline-flex;
+          align-items: center;
+          padding: 0 0.5rem;
 
           .runBtn {
             color: gt.theme-var(text-color-2);
+            background-color: gt.theme-var(game-hint-btn-bg, null, $thememaplight, $cssvars);
+            border-radius: 0.75rem;
+            padding: 0.25rem 0.75rem;
+
+            i {
+              margin-right: 0.25rem;
+            }
+
+            p {
+              margin-left: 0.25rem;
+            }
 
             &:focus {
               box-shadow: none;
