--- a/src/web/stylesheets/common/pages/zombieLand/style.scss
+++ b/src/web/stylesheets/common/pages/zombieLand/style.scss
@@ -279,8 +279,20 @@
       .zombieLand-question-block {
         flex-basis: 0;
         flex-grow: 1;
-        height: 50%;
+        height: 100%;
         background-color: gt.theme-var(game-transparent-bg, null, $thememaplight, $cssvars);
+
+        .block {
+          &:first-child {
+            height: 70%;
+            overflow: auto;
+          }
+
+          &:last-child {
+            height: 30%;
+            overflow: auto;
+          }
+        }
       }
 
       .zombieLand-title-block {
@@ -296,7 +308,7 @@
       }
 
       .zombieLand-question-content {
-        height: calc(100% - 51px);
+        // height: calc(60% - 51px);
         overflow-y: auto;
         padding: 0.5rem;
 
@@ -329,6 +341,16 @@
             margin: auto;
             border-radius: 0.75rem;
           }
+        }
+      }
+
+      .zombieLand-preview-content {
+        // height: calc(40% - 51px);
+        overflow: auto;
+
+        img {
+          width: 100%;
+          object-fit: contain;
         }
       }
     }
@@ -445,9 +467,23 @@
 
         .runBtnContainer {
           position: relative;
+          display: inline-flex;
+          align-items: center;
+          padding: 0 0.5rem;
 
           .runBtn {
             color: gt.theme-var(text-color-2);
+            background-color: gt.theme-var(game-hint-btn-bg, null, $thememaplight, $cssvars);
+            border-radius: 0.75rem;
+            padding: 0.25rem 0.75rem;
+
+            i {
+              margin-right: 0.25rem;
+            }
+
+            p {
+              margin-left: 0.25rem;
+            }
 
             &:focus {
               box-shadow: none;
