--- a/src/web/stylesheets/common/pages/ide/style.scss
+++ b/src/web/stylesheets/common/pages/ide/style.scss
@@ -121,7 +121,15 @@ nav {
     overflow-y: scroll;
 
     .dropdown-item {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
       padding: 0.75rem;
+    }
+
+    img {
+      width: 70%;
     }
   }
 }
