--- a/src/web/stylesheets/common/pages/landing/style.scss
+++ b/src/web/stylesheets/common/pages/landing/style.scss
@@ -262,6 +262,11 @@
       bottom: -18%;
       left: -30px;
       width: 160px;
+
+      @include gm.media-breakpoint-down(sm) {
+        display: block !important;
+        bottom: -32%;
+      }
     }
 
     .cloud-left-9 {
@@ -274,7 +279,9 @@
       background-size: 100% 100%;
 
       @include gm.media-breakpoint-down(sm) {
-        display: none;
+        top: -40px;
+        width: 110px;
+        height: 160px;
       }
     }
 
@@ -288,7 +295,7 @@
       background-size: 100% 100%;
 
       @include gm.media-breakpoint-down(sm) {
-        display: none;
+        top: -50px;
       }
     }
 
@@ -336,7 +343,9 @@
       background-size: 100% 100%;
 
       @include gm.media-breakpoint-down(sm) {
-        display: none;
+        bottom: -37%;
+        width: 120px;
+        height: 160px;
       }
     }
 
@@ -370,6 +379,12 @@
       bottom: auto;
       top: 10%;
       right: -20px;
+
+      @include gm.media-breakpoint-down(sm) {
+        display: block;
+        top: -1%;
+        right: -80px;
+      }
     }
 
     .cloud-right-10 {
@@ -382,7 +397,9 @@
       background-size: 100% 100%;
 
       @include gm.media-breakpoint-down(sm) {
-        display: none;
+        bottom: -17%;
+        width: 100px;
+        height: 150px;
       }
     }
 
@@ -401,6 +418,9 @@
           margin-top: 0.1rem;
           margin-right: 1rem;
           font-size: 1.4rem;
+          background: none;
+          border: none;
+          padding: 0;
         }
       }
 
@@ -417,114 +437,84 @@
           width: 100%;
         }
       }
+    }
 
-      .unlimited-btn {
-        background-color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
-        border-radius: 0.5rem;
-        padding: 0.5rem 1.5rem;
+    .unlimited-btn {
+      background-color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
+      border-radius: 0.5rem;
+      padding: 0.5rem 1.5rem;
+      font-size: 1rem;
+      display: inline-block;
+
+      @include gm.media-breakpoint-down(xs) {
+        padding: 0.5rem 0.688rem;
+        font-size: 0.875rem;
+        display: inline-block;
+        width: 100%;
+      }
+
+      i {
+        margin-left: 0.5rem;
+
+        @include gm.media-breakpoint-down(xs) {
+          margin-left: 0.2rem;
+        }
+      }
+    }
+
+    .log-sign-btn {
+      padding-left: 0.8rem;
+      border-left: 1px solid gt.theme-var(landing-border-color, null, $thememaplight, $cssvars);
+      margin-left: 2rem;
+
+      @include gm.media-breakpoint-down(xs) {
+        display: none;
+        border-left: none;
+        margin-left: 0 !important;
+      }
+
+      @include gm.media-breakpoint-down(sm) {
+        margin-left: 1rem;
+        padding-left: 0;
+      }
+
+      .login-btn,
+      .signup-btn {
+        color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
+        padding: 0.5rem 1.25rem;
         font-size: 1rem;
         display: inline-block;
 
         @include gm.media-breakpoint-down(xs) {
-          padding: 0.5rem 0.688rem;
-          font-size: 0.875rem;
-          display: inline-block;
+          width: 100%;
         }
 
-        i {
-          margin-left: 0.5rem;
-
-          @include gm.media-breakpoint-down(xs) {
-            margin-left: 0.2rem;
-          }
+        &:hover {
+          background-color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
+          color: gt.theme-var(landing-white-color, null, $thememaplight, $cssvars);
         }
       }
 
-      .log-sign-btn {
-        padding-left: 0.8rem;
-        border-left: 1px solid gt.theme-var(landing-border-color, null, $thememaplight, $cssvars);
-        margin-left: 2rem;
-
-        @include gm.media-breakpoint-down(xs) {
-          display: none;
-        }
+      .signup-btn {
+        border: 1px solid gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
+        border-radius: 0.5rem;
+        margin-left: 0.9rem;
 
         @include gm.media-breakpoint-down(sm) {
-          margin-left: 1rem;
-          padding-left: 0;
-        }
-
-        .login-btn,
-        .signup-btn {
-          color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
-          padding: 0.5rem 1.25rem;
-          font-size: 1rem;
-          display: inline-block;
-
-          &:hover {
-            background-color: gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
-            color: gt.theme-var(landing-white-color, null, $thememaplight, $cssvars);
-          }
-        }
-
-        .signup-btn {
-          border: 1px solid gt.theme-var(landing-yellow-color, null, $thememaplight, $cssvars);
-          border-radius: 0.5rem;
-          margin-left: 0.9rem;
-
-          @include gm.media-breakpoint-down(sm) {
-            margin-left: 0;
-          }
+          margin-left: 0;
         }
       }
+    }
 
-      .mobile-sidebar-left {
-        position: fixed;
-        left: -400px;
-        top: -5px;
-        background: rgba(0, 0, 0, 0.7);
-        height: 100%;
-        width: 100%;
-        display: none;
+    .sidebar-modal {
+      .mobile-close-btn {
+        color: gt.theme-var(landing-red-light-color, null, $thememaplight, $cssvars);
+        opacity: 1;
+      }
 
-        @include gm.media-breakpoint-down(sm) {
-          display: block;
-        }
-
-        .mobile-close-btn {
-          color: gt.theme-var(landing-grey-light-color, null, $thememaplight, $cssvars);
-        }
-
-        .mobile-side-btns {
-          width: 250px;
-          height: 100%;
-        }
-
-        .mobile-menu-header {
-          padding: 1rem;
-          display: flex;
-
-          .logo {
-            width: 7.375rem;
-            margin-top: 0;
-          }
-        }
-
-        .butts {
-          padding: 1rem;
-          border-top: 1px solid gt.theme-var(landing-border-color, null, $thememaplight, $cssvars);
-
-          a {
-            display: block;
-            width: 100%;
-          }
-
-          .log-sign-btn {
-            display: block;
-            margin: 0;
-            border: none;
-          }
-        }
+      .modal-content {
+        border-radius: 0;
+        border: none;
       }
     }
 
@@ -882,7 +872,7 @@
                 width: 50%;
 
                 &:before {
-                  font-family: 'Font Awesome 5 Free';
+                  font-family: "Font Awesome 5 Free";
                   content: "\f0d9";
                   position: absolute;
                   left: -11px;
@@ -901,7 +891,7 @@
                 width: 50%;
 
                 &:before {
-                  font-family: 'Font Awesome 5 Free';
+                  font-family: "Font Awesome 5 Free";
                   content: "\f0da";
                   position: absolute;
                   right: -12px;
@@ -936,6 +926,11 @@
       }
 
       .hackerkit2-sec {
+        @include gm.media-breakpoint-down(sm) {
+          margin-top: 4rem;
+          margin-bottom: 4rem;
+        }
+
         .hackerkit-desk-sec {
           .card {
             margin-bottom: 1.5rem;
@@ -993,14 +988,20 @@
       .happy-learning {
         .swiper {
           padding-bottom: 4rem;
+
+          .swiper-slide {
+            height: auto;
+          }
         }
 
         .card {
           border-radius: 0.8rem;
           border: none;
+          height: 100%;
 
           .card-body {
             padding: 1rem;
+            height: 100%;
 
             .learn-heding {
               .user-detail {
@@ -1011,8 +1012,8 @@
                 .uesr-img {
                   picture {
                     img {
-                      width: 4rem;
-                      height: 4rem;
+                      width: 3rem;
+                      height: 3rem;
                       border-radius: 4rem;
                       margin-right: 1rem;
                     }
@@ -1020,7 +1021,7 @@
                 }
 
                 h3 {
-                  font-size: 1.25rem;
+                  font-size: 1.1rem;
                   font-weight: 600;
                   margin-bottom: 0.2rem;
                   margin-top: 0.5rem;
@@ -1050,6 +1051,11 @@
       }
 
       .faq {
+        @include gm.media-breakpoint-down(sm) {
+          margin-top: 5rem;
+          margin-bottom: 10rem;
+        }
+
         .accordion {
           .card {
             border-radius: 0.8rem;
