--- a/src/web/stylesheets/common/pages/landing/style.scss
+++ b/src/web/stylesheets/common/pages/landing/style.scss
@@ -1,9 +1,9 @@
+@use "../../sass/base/functions" as gf;
 @use "../../sass/themes/_default" as gt;
 @use "../../sass/base/_mixins" as gm;
+@use "../../sass/base/_placeholders";
 
 @import "./_landingTheme.js";
-
-$font-awesome-family: "$font-family";
 
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
@@ -942,6 +942,8 @@ $font-awesome-family: "$font-family";
             }
 
             .right-text-mobile {
+              @extend %font-far;
+
               @include gm.media-breakpoint-down(sm) {
                 position: absolute;
                 top: 5rem;
@@ -950,8 +952,7 @@ $font-awesome-family: "$font-family";
                 width: 50%;
 
                 &:before {
-                  font-family: $font-awesome-family;
-                  content: "\f0d9";
+                  content: gf.unicode("f0d9");
                   position: absolute;
                   left: -11px;
                   font-size: 3rem;
@@ -970,7 +971,7 @@ $font-awesome-family: "$font-family";
 
                 &:before {
                   font-family: "$font-family";
-                  content: "\f0da";
+                  content: gf.unicode("f0da");
                   position: absolute;
                   right: -12px;
                   font-size: 3rem;
@@ -1146,6 +1147,8 @@ $font-awesome-family: "$font-family";
               padding: 0;
 
               h3 {
+                @extend %font-far;
+
                 margin: 0;
                 font-size: 1.125rem;
                 font-weight: 600;
@@ -1153,8 +1156,7 @@ $font-awesome-family: "$font-family";
                 cursor: pointer;
 
                 &:after {
-                  content: "\f106";
-                  font-family: "$font-family";
+                  content: gf.unicode("f106");
                   font-weight: 900;
                   float: right;
                 }
@@ -1162,7 +1164,7 @@ $font-awesome-family: "$font-family";
 
               .collapsed {
                 &:after {
-                  content: "\f107";
+                  content: gf.unicode("f107");
                 }
               }
             }
