create challenge modal fixed, turtle play btn fixed, challenge autocrop img fixed

--- a/src/web/stylesheets/common/pages/challenges/style.scss
+++ b/src/web/stylesheets/common/pages/challenges/style.scss
@@ -338,6 +338,7 @@ $challenge-item-image-height-down-md: 8.25rem;
         height: 7rem;
         border-radius: 0.75rem;
         object-fit: contain;
+        background-color: gt.theme-var(bg-1);
 
         @include gm.media-breakpoint-up(xxl) {
           height: 8rem;
