--- a/src/web/stylesheets/common/sass/components/_challenges-grid.scss
+++ b/src/web/stylesheets/common/sass/components/_challenges-grid.scss
@@ -74,6 +74,7 @@ $challenge-item-image-height-down-md: 10.25rem;
       width: 100%;
       height: 100%;
       border-radius: 0.75rem;
+      object-fit: contain;
     }
   }
 
