--- a/src/web/stylesheets/common/sass/components/_paginator.scss
+++ b/src/web/stylesheets/common/sass/components/_paginator.scss
@@ -7,6 +7,7 @@ $pagination-offset-after-lg: 6vh;
 .pagination-footer {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: $pagination-offset;
 
