--- a/src/web/stylesheets/common/sass/components/_your-challenges-actions-modal.scss
+++ b/src/web/stylesheets/common/sass/components/_your-challenges-actions-modal.scss
@@ -48,6 +48,7 @@
       width: 80%;
       height: 11rem;
       border-radius: 0.5rem;
+      background-color: gt.theme-var(bg-1);
     }
 
     .btn-group {
