--- a/src/web/stylesheets/common/pages/clubs/style.scss
+++ b/src/web/stylesheets/common/pages/clubs/style.scss
@@ -1147,6 +1147,14 @@
       @include gm.media-breakpoint-up(md) {
         max-width: 70%;
       }
+
+      @include gm.media-breakpoint-up (lg) {
+        max-width: 60%;
+      }
+
+      @include gm.media-breakpoint-up(xl) {
+        max-width: 50%;
+      }
     }
 
     .modal-body {
