--- a/src/web/stylesheets/common/pages/profile/style.scss
+++ b/src/web/stylesheets/common/pages/profile/style.scss
@@ -105,4 +105,25 @@
       }
     }
   }
+
+  .profileSuccessModal {
+    .modal-body {
+      button {
+        &.close {
+          border-radius: 0.5rem;
+          color: gt.theme-var(text-color-2);
+          font-size: 2.5rem;
+          background: gt.theme-var(modal-close-btn-bg);
+          padding: 0.125rem 0.6rem 0.45rem;
+          line-height: 0.75;
+          opacity: 1;
+          margin-left: auto;
+
+          @include gm.media-breakpoint-down(md) {
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+  }
 }
